Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107262

REG: Enter on r/o QComboBox does not close a dialog anymore

XMLWordPrintable

    • All
    • f7e2984a1a (qt/qtbase/dev) f7e2984a1a (qt/tqtc-qtbase/dev) 789f51eabc (qt/qtbase/6.4) 789f51eabc (qt/tqtc-qtbase/6.4) 789f51eabc (qt/tqtc-qtbase/tqtc/qtinsight-6.4)

      Commit 64ffe0aacb6bba4875a9ccdeea96b5858c7d01e6 broke pressing RETURN aka. the default key in a dialog to close it, when a read-only QComboBox has the focus.

      Before that patch, Enter + Return were actively ignore()d, but this code path was removed, resulting in those keys to be auto-accepted.

        For Gerrit Dashboard: QTBUG-107262
        # Subject Branch Project Status CR V

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            rgriebl Robert Griebl
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes